--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 --- #YAML:1.0
 name:               vimabb
-version:            1.07
+version:            1.08
 abstract:           Turn stdin into vim abbreviation code.
 author:
     - Leo Charre leocharre at cpan dot org
 license:            perl
 distribution_type:  module
 configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
     ExtUtils::MakeMaker:  0
 requires:
     Carp:                 1
@@ -15,7 +17,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.48
+generated_by:       ExtUtils::MakeMaker version 6.54
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
